--- a/set_times/snw.yaml
+++ b/set_times/snw.yaml
@@ -1,3 +1,9 @@
+stages:
+  purple: "rgb(101, 4, 150)"
+  green: "rgb(10, 95, 7)"
+  spiral: "rgb(77, 77, 77)"
+  sick: "rgb(173, 54, 163)"
+
 purple:
   12:25pm:
     name: P.O.D.
@@ -19,7 +25,7 @@ purple:
     length: 80
   10:00pm:
     name: System of a Down
-    length: 80
+    length: 120
 
 green:
   11:50am:
