--- a/set_times/snw.yaml
+++ b/set_times/snw.yaml
@@ -1,6 +1,7 @@
 text:
   title: <span style="font-size:smaller">(Unofficial)</span> Sick New World Schedule
   subtitle: Set end-times are eyeballed off of the <a href="https://www.sicknewworldfest.com/" class="button">official schedule</a>
+  color: "rgb(205, 206, 136)"
 
 stages:
   purple: "rgb(101, 4, 150)"
