--- a/set_times/riotfest23-sun.yaml
+++ b/set_times/riotfest23-sun.yaml
@@ -1,5 +1,5 @@
 text:
-  title: <span style="font-size:smaller">(Unofficial)</span> Riot Fest 2023 Sunday Schedule
+  title: Riot Fest 2023 Sunday Schedule
   subtitle: <a href="https://riotfest.org/2023/08/30/the-daily-schedule-is-here/" class="button">Official Schedule</a> | <a href="/riotfest23-fri" class="button">Friday Schedule</a> | <a href="/riotfest23-sat" class="button">Saturday Schedule</a> | <a href="/riotfest23-sun" class="button">Sunday Schedule</a>
   color: "gainsboro"
   background: "#15192d"
