--- a/set_times/riotfest23-fri.yaml
+++ b/set_times/riotfest23-fri.yaml
@@ -3,6 +3,8 @@ text:
   subtitle: <a href="https://riotfest.org/2023/08/30/the-daily-schedule-is-here/" class="button">Official Schedule</a> | <a href="/riotfest23-fri" class="button">Friday Schedule</a> | <a href="/riotfest23-sat" class="button">Saturday Schedule</a> | <a href="/riotfest23-sun" class="button">Sunday Schedule</a>
   color: "gainsboro"
   background: "#15192d"
+  lines: darkgrey
+  selection: white
 
 stages:
   RIOT: "#f1c135"
